[package]
name = "focuscube-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "focuscube"

[[bin]]
name = "focuscube-daemon"
path = "src/bin/focuscube-daemon.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
objc = "0.2"
block = "0.1"
core-foundation = "0.9"
notify = "6.1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cc = "1.0"
sysinfo = "0.29"